src/app/typePicker/TypePicker.module.css
.container {
	width: 100%;
}

.categories {
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	gap: 4px;
}

.card {
	aspect-ratio: 1 / 1;
	position: relative;
}

.label {
	position: absolute;
	color: white;
	text-shadow: 0 0 8px black;
	margin: 0;
	z-index: 100;
}

.image {
	width: 100%;
	height: 100%;
	object-fit: cover;
}

.inputTitle {
	margin: 8px 0;
}

.input {
	width: 100%;
	box-sizing: border-box;
	border: none;
	padding: 12px 16px;
	border-radius: 8px;
	outline: none;
}

